# python-template

./: .editorconfig  .gitattributes  .gitignore  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .talismanrc  CHANGELOG.md  CONTRIBUTING.md  README.md  START.md  pyproject.toml
{{ cookiecutter.repo_name }}/data/: README.md
{{ cookiecutter.repo_name }}/decisions/: 0001-record-decisions.md
{{ cookiecutter.repo_name }}/docs/: conf.py  index.rst
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/api/: app.py  models.py  routes.py  settings.py
{{ cookiecutter.repo_name }}/tests/: test_about.py
